add_library(pac-107-arduino-uavcan INTERFACE)

target_sources(pac-107-arduino-uavcan INTERFACE
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_ExecuteCommand_ServiceServer.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_Heartbeat.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_Version.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_ExecuteCommand_ServiceClient.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_ID.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/test_main.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/src/util/Types.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/ArduinoUAVCAN.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec-mbed.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec-host.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec-rp2040.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/external/catch/v2.12.1/include/catch.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/ArduinoO1Heap.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/convert.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/power/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/velocity/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/velocity/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/force/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/force/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/acceleration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/acceleration/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/energy/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angular_acceleration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angular_acceleration/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/torque/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/torque/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/frequency/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/duration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/duration/WideScalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/mass/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/volumetric_flow_rate/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/pressure/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/magnetic_field_strength/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/magnetic_field_strength/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/voltage/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angular_velocity/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angular_velocity/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/electric_charge/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/temperature/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/volume/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angle/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/angle/Quaternion_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/electric_current/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/length/WideVector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/length/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/length/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/unit/length/WideScalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/power/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/velocity/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/velocity/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/force/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/force/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/acceleration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/acceleration/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/energy/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angular_acceleration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angular_acceleration/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/torque/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/torque/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/frequency/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/duration/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/duration/WideScalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/mass/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/volumetric_flow_rate/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/pressure/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/magnetic_field_strength/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/magnetic_field_strength/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/voltage/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angular_velocity/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angular_velocity/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/electric_charge/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/temperature/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/volume/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angle/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/angle/Quaternion_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/electric_current/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/length/WideVector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/length/Scalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/length/Vector3_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/si/sample/length/WideScalar_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/diagnostic/Record_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/diagnostic/Record_1_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/diagnostic/Severity_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/internet/udp/HandleIncomingPacket_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/internet/udp/OutgoingPacket_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/internet/udp/OutgoingPacket_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/internet/udp/HandleIncomingPacket_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/NodeIDAllocationData_2_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/NodeIDAllocationData_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/cluster/Entry_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/cluster/RequestVote_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/cluster/AppendEntries_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/pnp/cluster/Discovery_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/register/Name_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/register/Value_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/register/Access_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/register/List_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Bit_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Real32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Integer32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Integer8_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Integer64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Natural8_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Natural32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Integer16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Real64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Natural16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Natural64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/array/Real16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Bit_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Real32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Integer32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Integer8_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Integer64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Natural8_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Natural32_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Integer16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Real64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Natural16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Natural64_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/primitive/scalar/Real16_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/GetInfo_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Read_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Write_1_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Modify_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Path_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/List_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Write_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/List_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Path_2_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Error_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Read_1_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/Modify_1_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/file/GetInfo_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/time/TAIInfo_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/time/SynchronizedTimestamp_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/time/TimeSystem_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/time/GetSynchronizationMasterInfo_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/time/Synchronization_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/Heartbeat_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/GetInfo_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/Health_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/Mode_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/Version_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/ExecuteCommand_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/ID_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/IOStatistics_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/ExecuteCommand_1_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/GetTransportStatistics_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/ServiceID_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/ServiceIDList_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/SubjectIDList_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/List_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/ID_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/uavcan/node/port/SubjectID_1_0.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/rotation/Planar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/rotation/PlanarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/translation/LinearVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/translation/Linear_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/translation/Velocity1VarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/translation/LinearTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/translation/Velocity3Var_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/StateVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/State_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/PointStateVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/Point_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/PointVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/PoseVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/PointStateVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/StateVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/PointState_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/geodetic/Pose_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/StateVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/TwistVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/State_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PointStateVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/Point_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PointVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PoseVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PointStateVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/TwistVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/Twist_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PoseVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/StateVar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/PointState_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/kinematics/cartesian/Pose_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/dynamics/rotation/Planar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/dynamics/rotation/PlanarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/dynamics/translation/Linear_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/dynamics/translation/LinearTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/optics/HighColor_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/thermodynamics/PressureTempVarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/acoustics/Note_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/time/TAI64Var_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/time/TAI64VarTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/time/TAI64_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/electricity/Power_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/electricity/SourceTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/electricity/PowerTs_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/physics/electricity/Source_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/battery/Parameters_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/battery/Parameters_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/battery/Status_0_2.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/battery/Status_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/gnss/Sources_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/gnss/DilutionOfPrecision_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/gnss/Time_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/gnss/Heartbeat_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/common/Readiness_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/common/Heartbeat_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/sensor/Status_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/Feedback_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/Status_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/FaultFlags_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector6_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector3_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector8_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector2_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Scalar_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector31_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/wrappers/reg/drone/service/actuator/common/sp/Vector4_0_1.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/o1heap/o1heap.c"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/libcanard/canard.c"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/libcanard/canard_dsdl.c"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec-esp32.c"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec-samd.c"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/include/test/util/Const.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/extras/test/include/test/util/Types.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/ArduinoUAVCAN.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/ArduinoUAVCANTypes.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/o1heap/o1heap.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/libcanard/canard.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/libcanard/canard_dsdl.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/nunavut/support/serialization.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/power/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/velocity/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/velocity/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/force/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/force/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/acceleration/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/acceleration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/energy/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angular_acceleration/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angular_acceleration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/torque/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/torque/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/frequency/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/duration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/duration/WideScalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/mass/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/volumetric_flow_rate/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/pressure/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/magnetic_field_strength/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/magnetic_field_strength/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/voltage/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angular_velocity/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angular_velocity/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/electric_charge/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/temperature/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/volume/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angle/Quaternion_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/angle/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/electric_current/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/length/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/length/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/length/WideVector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/unit/length/WideScalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/power/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/velocity/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/velocity/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/force/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/force/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/acceleration/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/acceleration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/energy/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angular_acceleration/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angular_acceleration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/torque/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/torque/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/frequency/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/duration/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/duration/WideScalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/mass/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/volumetric_flow_rate/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/pressure/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/magnetic_field_strength/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/magnetic_field_strength/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/voltage/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angular_velocity/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angular_velocity/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/electric_charge/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/temperature/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/volume/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angle/Quaternion_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/angle/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/electric_current/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/length/Vector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/length/Scalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/length/WideVector3_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/si/sample/length/WideScalar_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/diagnostic/Record_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/diagnostic/Record_1_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/diagnostic/Severity_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/internet/udp/HandleIncomingPacket_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/internet/udp/HandleIncomingPacket_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/internet/udp/OutgoingPacket_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/internet/udp/OutgoingPacket_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/udp/Endpoint_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/udp/Frame_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/ethernet/Frame_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/ethernet/EtherType_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/serial/Fragment_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/serial/Fragment_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/Error_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/RTR_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/Manifestation_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/ArbitrationID_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/BaseArbitrationID_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/Frame_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/Frame_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/DataFD_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/ExtendedArbitrationID_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/metatransport/can/DataClassic_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/NodeIDAllocationData_2_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/NodeIDAllocationData_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/cluster/AppendEntries_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/cluster/RequestVote_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/cluster/Discovery_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/pnp/cluster/Entry_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/register/List_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/register/Access_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/register/Value_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/register/Name_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/String_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/Unstructured_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/Empty_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Bit_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Real16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Integer64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Integer16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Natural16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Integer8_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Natural8_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Real32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Real64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Natural64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Integer32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/array/Natural32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Bit_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Real16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Integer64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Integer16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Natural16_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Integer8_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Natural8_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Real32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Real64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Natural64_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Integer32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/primitive/scalar/Natural32_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Path_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/List_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Path_2_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Modify_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Read_1_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/List_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Modify_1_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/GetInfo_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Error_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/GetInfo_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Write_1_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Read_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/file/Write_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/time/SynchronizedTimestamp_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/time/TimeSystem_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/time/TAIInfo_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/time/GetSynchronizationMasterInfo_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/time/Synchronization_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/_register/List_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/_register/Access_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/_register/Value_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/_register/Name_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/GetTransportStatistics_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/ExecuteCommand_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/Heartbeat_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/GetInfo_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/Health_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/ID_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/IOStatistics_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/Version_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/ExecuteCommand_1_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/Mode_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/List_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/ServiceIDList_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/ID_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/SubjectID_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/ServiceID_1_0.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/uavcan/node/port/SubjectIDList_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/rotation/Planar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/rotation/PlanarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/Linear_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/Velocity3Var_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/Velocity3Var_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/LinearTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/LinearVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/translation/Velocity1VarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/StateVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/Point_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/PointStateVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/StateVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/PointVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/PoseVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/State_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/Pose_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/PointState_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/geodetic/PointStateVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/StateVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/Twist_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/TwistVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/Point_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PointStateVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/StateVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PointVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/TwistVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PoseVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/State_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/Pose_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PointState_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PoseVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/kinematics/cartesian/PointStateVar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/dynamics/rotation/Planar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/dynamics/rotation/PlanarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/dynamics/translation/Linear_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/dynamics/translation/LinearTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/optics/HighColor_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/thermodynamics/PressureTempVarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/acoustics/Note_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/time/TAI64VarTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/time/TAI64Var_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/time/TAI64_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/electricity/Source_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/electricity/SourceTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/electricity/Power_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/physics/electricity/PowerTs_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Error_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Parameters_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Status_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Parameters_0_2.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Status_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Technology_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/battery/Parameters_0_3.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/gnss/DilutionOfPrecision_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/gnss/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/gnss/Heartbeat_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/gnss/Time_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/gnss/Sources_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/air_data_computer/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/common/Readiness_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/common/Heartbeat_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/sensor/Status_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/Feedback_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/Status_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/FaultFlags_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Scalar_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector6_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector2_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector3_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector8_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector4_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/common/sp/Vector31_0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/servo/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/types/reg/drone/service/actuator/esc/__0_1.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/LockGuard.h"
  "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src/utility/CritSec.h"
)

target_include_directories(pac-107-arduino-uavcan INTERFACE
 "${CMAKE_CURRENT_LIST_DIR}/107-Arduino-UAVCAN/src"
)

if (NOT TARGET arduino-compat)
    add_subdirectory(../../arduino-compat build_arduino-compat)
endif()

target_link_libraries(pac-107-arduino-uavcan INTERFACE
    arduino-compat
)
